--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,9 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 BOT_TOKEN=527407998:AAEhQD8PPUw
 ADMINS_LIST=51256566641
 
+REPLICATE_API_TOKEN=
+
+DB_TYPE=postgres
 DB_NAME=your_db_name
 DB_USER=your_db_user
 DB_PASSWORD=your_password
